deployment_caravana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caravana-land
  namespace: caravana
  labels:
    app: caravana-land
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caravana-land
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: caravana-land
    spec:
      containers:
      - name: caravana-land
        image: ponyesteves/ceibo-land:11
        ports:
        - containerPort: 4000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: caravana-land
  namespace: caravana
  labels:
    app: caravana-land
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 4000
  selector:
    app: caravana-land
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caravana-land-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - caravana.dev
      secretName: caravana-land-tls
  rules:
    - host: caravana.dev
      http:
        paths:
        - backend:
            service:
              name: caravana-land
              port:
                number: 80
          pathType: ImplementationSpecific
